--- a/graph/graph.csproj
+++ b/graph/graph.csproj
@@ -178,7 +178,12 @@
     <None Include="003.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="011.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Compile Include="BMP.cs" />
     <Compile Include="DXF.cs" />
+    <Compile Include="GR.cs" />
     <Compile Include="InputDialog.cs">
       <SubType>Form</SubType>
     </Compile>
